--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<!-- <li><a href="generic.html">Ipsum veroeros</a></li>
+							<!-- <li><a href="gene
+
+ric.html">Ipsum veroeros</a></li>
 							<li><a href="generic.html">Tempus etiam</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li> -->
@@ -56,6 +58,9 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
+									
+									<!-- ===========change the content============= -->
+									
 									<a href="generic.html">
 										<h2>Boise</h2>
 										<div class="content">
@@ -240,7 +245,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; TJ Zhang. All rights reserved</li><li>Gihub: <a href="https://github.com/TianjieZhang1993">Tianjie Zhang</a></li>
+								<li>&copy; TJ Zhang. All rights reserved</li><li>Github: <a href="https://github.com/TianjieZhang1993">Tianjie Zhang</a></li>
 							</ul>
 						</div>
 					</footer>
