--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ ric.html">Ipsum veroeros</a></li>
 									
 									<!-- ===========change the content============= -->
 									
-									<a href="generic.html">
+									<a href="boise.html">
 										<h2>Boise</h2>
 										<div class="content">
 											<p>we live here.</p>
