--- a/pocatello.html
+++ b/pocatello.html
@@ -55,9 +55,9 @@
 									<h3>Fit</h3>
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><img src="images/pocatello/pocatello_1.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_2.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_3.jpg" alt="" /></span></div>
+											<!-- <div class="col-12"><span class="image fit"><img src="images/pocatello/pocatello_1.jpg" alt="" /></span></div> -->
+											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_2.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_3.JPG" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_4.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_5.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
