--- a/pocatello.html
+++ b/pocatello.html
@@ -60,11 +60,11 @@
 											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_3.JPG" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_4.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_1.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_1.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_1.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_1.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_1.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pocatello/pocatello_1.jpg" alt="" /></span></div>
 										</div>
 									</div>
 								
