--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ ric.html">Ipsum veroeros</a></li>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pocatello_1.jpg" alt="" />
+										<img src="images/pic03.jpg" alt="" />
 									</span>
 									
 									
