--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@ ric.html">Ipsum veroeros</a></li>
 							</section>
 							<ul class="copyright">
 								<li>&copy; TJ Zhang. All rights reserved</li><li>Github: <a href="https://github.com/TianjieZhang1993">Tianjie Zhang</a></li>
+								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 							</ul>
 						</div>
 					</footer>
