--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ ric.html">Ipsum veroeros</a></li>
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
+							<!-- <section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -247,7 +247,7 @@ ric.html">Ipsum veroeros</a></li>
 										<li><input type="submit" value="Send" class="primary" /></li>
 									</ul>
 								</form>
-							</section>
+							</section> -->
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -262,8 +262,12 @@ ric.html">Ipsum veroeros</a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; TJ Zhang. All rights reserved</li><li>Github: <a href="https://github.com/TianjieZhang1993">Tianjie Zhang</a></li>
+								<li>&copy; TJ Zhang. All rights reserved</li>
+								<!-- <li>Github: <a href="https://github.com/TianjieZhang1993">Tianjie Zhang</a></li> -->
+								<li><a href="https://github.com/TianjieZhang1993" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://tianjiezhang1993.github.io/resume/" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
 							</ul>
 						</div>
 					</footer>
