--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@ ric.html">Ipsum veroeros</a></li>
 									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
+									<li><a href="https://github.com/TianjieZhang1993" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://tianjiezhang1993.github.io/resume/" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
 									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
 									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
@@ -267,7 +267,7 @@ ric.html">Ipsum veroeros</a></li>
 								<li><a href="https://github.com/TianjieZhang1993" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://tianjiezhang1993.github.io/resume/" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
+								<li><a href="https://tianjiezhang1993.github.io/resume/" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li> -->
 							</ul>
 						</div>
 					</footer>
