--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ ric.html">Ipsum veroeros</a></li>
 									<!-- ===========Boise State University============= -->
 									
 									
-								<!-- </article>
+								</article>
 								<article class="style3">
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
@@ -112,7 +112,7 @@ ric.html">Ipsum veroeros</a></li>
 
 
 
-								<article class="style4">
+								<!-- <article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
