--- a/bsu.html
+++ b/bsu.html
@@ -65,9 +65,9 @@
 											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_7.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_9.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_10.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_11.jpg" alt="" /></span></div>
+											<!-- <div class="col-4"><span class="image fit"><img src="images/bsu/bsu_11.jpg" alt="" /></span></div> -->
 											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_12.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_13.jpg" alt="" /></span></div>
+											<!-- <div class="col-4"><span class="image fit"><img src="images/bsu/bsu_13.jpg" alt="" /></span></div> -->
 											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_14.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_15.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/bsu/bsu_16.jpg" alt="" /></span></div>
