--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ ric.html">Ipsum veroeros</a></li>
 									<span class="image">
 										<img src="images/luckypeak/luckypeak_1.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="luckypeak.html">
 										<h2>Lucky Peak</h2>
 										<div class="content">
 											<p>这里的石头很神奇～</p>
