--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ ric.html">Ipsum veroeros</a></li>
 
 								 <article class="style4">
 									<span class="image">
-										<img src="images/luckypeak/luckypeak_1.jpg" alt="" />
+										<img src="images/luckypeak/luckypeak_1.JPG" alt="" />
 									</span>
 									<a href="luckypeak.html">
 										<h2>Lucky Peak</h2>
